added style sheet and linked it up correctly relates #12

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE HTML>
-<html><head><meta charset="UTF-8"><title>BeginningElm</title><style>html,head,body { padding:0; margin:0; }
-body { font-family: calibri, helvetica, arial, sans-serif; }</style><script type="text/javascript">
+<html><head><meta charset="UTF-8"><title>BeginningElm</title>
+<link rel="stylesheet" href="./public/style.css">
+
+<link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
+<script type="text/javascript">
 (function() {
 'use strict';
 
