--- a/index.html
+++ b/index.html
@@ -2,11 +2,46 @@
 <html>
   <head>
     <link rel="stylesheet" href="./public/style.css">
+    <link rel="stylesheet" href="./public//cassette.css">
     <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
   </head>
 
   <body>
     <div id="elm-code-is-loaded-here"></div>
+
+      <div id="cassette" class="mixtape">
+        <div class="tag">
+          <div class="title"></div>
+          <div class="player">
+            <div class="play">
+              <div class="roll-1">
+                <div class="teeth"></div>
+              </div>
+              <div class="roll-2">
+                <div class="teeth"></div>
+              </div>
+            </div>
+            <div class="b-txt">
+              <div class="slog-txt">
+                <h1> Eliteware </h1>
+              </div>
+              <div class="right-txt">
+                <h1>F190</h1>
+                <h2>F190</h2>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="bot-det">
+        </div>
+        <div class="screws">
+          <div class="scr-1"></div>
+          <div class="scr-2"></div>
+          <div class="scr-3"></div>
+          <div class="scr-4"></div>
+        </div>
+      </div>
+
 
     <script src="elm.js"></script>
     <script>
