--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="./public/style.css">
-    <link rel="stylesheet" href="./public//cassette.css">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./cassette.css">
     <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
   </head>
 
@@ -45,7 +45,7 @@
 
     <script src="elm.js"></script>
     <script>
-      Elm.BeginningElm.embed(document.getElementById("elm-code-is-loaded-here"));
-    </script>
+    Elm.BeginningElm.embed(document.getElementById('elm-code-is-loaded-here'));
+</script>
   </body>
 </html>
