--- a/public/index.html
+++ b/public/index.html
@@ -40,11 +40,10 @@
           <div class="scr-4"></div>
         </div>
       </div>
-
-
     <script src="elm.js"></script>
     <script>
-    Elm.BeginningElm.embed(document.getElementById('elm-code-is-loaded-here'));
+    console.log(Elm);
+Elm.ElmMusicRecognitionModule.embed(document.getElementById('elm-code-is-loaded-here'));
 </script>
   </body>
 </html>
